<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Casual Bettor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">BetterHome</string>
    <string name="title_activity_bank">Transfer</string>
    <string name="title_activity_sport">Sports</string>
    <string name="title_activity_bet">Betting</string>
    <string name="title_activity_sport_list">SportListActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="notnow">Not Now</string>
    <string name="transferConfirm">Transfer</string>

    <string name="emptyIDPassTitle">Empty ID or Password</string>
    <string name="emptyIDPassDesc">Please enter your Bettor ID and Password</string>
    <string name="authenFailTitle">Authentication Failed</string>
    <string name="authenFailDesc">Bettor ID and Password mismatched. Please correct</string>

    <string name="invalidTitle">Invalid Transfer</string>
    <string name="invalidDesc">Please enter an amount</string>
    <string name="transConfirmTitle">Transfer Confirmation</string>
    <string name="transConfirmDesc">Authorize this transfer?</string>

    <string name="loginID">Bettor ID</string>
    <string name="loginPass">Password</string>
    <string name="loginBtn">Bet NOW</string>
    <string name="signupBtn">Become a Bettor</string>

    <string name="currentBalance">Your current balance is </string>
    <string name="toTransfer">Visit Balance Transfer Manager</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>

    <string name="fromAccount">From</string>
    <string name="toAccount">To</string>
    <string name="transferAmount">Enter Amount</string>
    <string name="clearAmount">Clear</string>
    <string name="transfer">Transfer</string>
    <string name="addAccount">Add New Account</string>

    <string name="sportFootball">Football</string>
    <string name="sportTennis">Tennis</string>
    <string name="sportFormulaOne">Formula 1</string>
    <string name="sportBasketball">Transfer</string>
    <string name="sportSwimming">Swimming</string>
    <string name="sportHorseRacing">Horse Racing</string>
    <string name="sportGymnastics">Gymnastics</string>
    <string name="sportBoxing">Boxing</string>


</resources>
