<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="20"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/loginID"
            android:layout_weight="5"
            android:id="@+id/idText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/loginPass"
            android:inputType="textPassword"
            android:layout_weight="5"
            android:id="@+id/passText"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="10">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/loginBtn"
                android:id="@+id/loginBtn"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/signupBtn"
                android:id="@+id/signupBtn"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="30">



    </LinearLayout>

</LinearLayout>
